<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Contraseña</string>
    <string name="buton_login">Ingresar</string>
    <string name="go_to_registrer">¿Si aun no te has registrado presiona aquí?</string>
    <string name="label_register">label-register</string>
    <string name="label_regis">Registrate</string>
    <string name="label_name">Nombre completo</string>
    <string name="buton_register">Confirmar Registro</string>
    <string name="go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_data">Por favor completa tus datos</string>
    <string name="option_menu">Menú de opciones</string>
    <string name="create_appointment">CREAR CITA</string>
    <string name="my_appointment">MI CITAS</string>
    <string name="logout">cerrar sessión</string>
    <string name="label_descripcion">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_tipo_cita">Tipo de cita</string>
    <string name="tipo1">Consulta</string>
    <string name="tipo2">Examen</string>
    <string name="tipo3">Operación</string>
    <string name="btn_next">siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_schedule_date">Fecha de la cita</string>
    <string name="btn_confirm">Confirmar cita</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>

    <string name="item_appointment_id">Cita médica %1$d</string>
    <string name="item_appointment_date">Atención el día %1$s</string>
    <string name="item_appointment_time">A las %1$s</string>
    <string name="my_appointments">Mis citas Médicas</string>
    <string name="press_back_again">presiones una vez más para salir</string>
    <string name="validate_appointment_description">Debes escribir una descripción mayor a 3</string>
    <string name="label_scheduled_time">Hora de la cíta</string>
    <string name="label_data_confirm_data">Datos de la cita</string>
    <string name="validate_scheduled_date">No selecciono una fecha</string>
    <string name="validate_appointment_time">No selecciono una hora</string>
    <string name="error_loading_speialties">Ocurrio un error al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrio un error al cargar los medicos</string>
    <string name="error_loading_hours">Error al cargar las horas</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y una fecha para ver las horas disponibles</string>
    <string name="label_not_available_hours">No se encontraron horas disponibles para esté médico y esta fecha</string>
    <string name="error_login">Error al hacer login</string>
    <string name="error_login_response">Se obtuvo una respuesta incorrecta del servidor</string>
    <string name="credential_incorrect">Las credenciales son incorrectas</string>
    <string name="please_outpu_">Porfavor ingrese un correo y una contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="label_created_at">Está se registro el dia %1$s con la siguiente descripción:</string>
    <string name="appointment_create_success">Cita registrada correctamente</string>
    <string name="Error_register_Appointment">Ocurrio un error registrando la cita médica</string>
    <string name="label_confirmed_password">Confirmar Contraseña</string>
    <string name="error_please_empy_fields">Por favor completa todos los campos</string>
    <string name="error_Coincided_passwords">Las contraseñas no coinciden</string>
    <string name="error_register_user">Hubo un error al registrar el paciente</string>
</resources>
