<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/bg_gradient"
    tools:context=".MenuActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:text="@string/option_menu"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />




        <Button
            android:id="@+id/btnCreateAppointment"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_add_circle"
            android:text="@string/create_appointment"
            style="@style/menuButton"/>

        <Button
            android:id="@+id/btnMyAppointments"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_schedule"
            android:text="@string/my_appointment"
            style="@style/menuButton"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_power_off"
            android:text="@string/logout"
            style="@style/menuButton"/>




</LinearLayout>