

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CreateAppointmentActivity"
    android:id="@+id/cvStep2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone"
    tools:visibility="visible"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:contentPadding="12dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/label_doctor"
                android:textColor="@color/letras" />

            <Spinner
                android:id="@+id/spinnerDoctors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/label_schedule_date"
                android:textColor="@color/letras" />

            <EditText
                android:id="@+id/etScheduledDate"
                android:onClick="onClickScheduledDate"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/letras" />

            <TextView
                android:id="@+id/tvSelectDoctorAndDate"
                android:textColor="@color/colorAccent"
                android:layout_margin="6dp"
                android:text="@string/label_select_doctor_and_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tvNotAvailableHours"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/label_not_available_hours"
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/radioGroupLeft"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"
                        android:textColor="@color/letras" />


                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"
                        android:textColor="@color/letras" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/radioGroupRight"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"
                        android:textColor="@color/letras" />


                    <RadioButton
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8:00 AM"
                        android:textColor="@color/letras" />


                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnNext2"
                style="@style/menuButton"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:drawableEnd="@drawable/ic_navigate_next"
                android:text="@string/btn_next" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.CardView>